changes has been made in the files

--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
     <!-- Animated Background -->
     <div id="particles-js"></div>
 
-    
+
 
     <!-- Header Section -->
     <header class="glass-header">
         <div class="header-container">
-            <!-- <div class="logo">
-                <img src="" alt="CIT Logo">
-            </div> -->
+
             <nav>
                 <ul>
                     <li><a href="#home" class="nav-link">Home</a></li>
@@ -37,7 +35,7 @@
     </header>
 
     <!-- Hero Section -->
-      <section class="hero" section id="home">
+    <section class="hero" section id="home">
         <div class="hero-content">
             <h1><span>The</span> Symposium <span>Begins Now</span></h1>
             <h1><span>Dextro'25</span></h1>
@@ -70,32 +68,7 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="about-container">
-        <div class="about-inner">
-            <h2 class="section-heading"><span>About</span> The Symposium</h2>
-            <p class="about-text">
-                Dextro'25 is hosted by the Department of Computer Science and Engineering at Chennai Institute of
-                Technology, providing students with a diverse range of opportunities to test their skills and knowledge
-                in the field of technology.
-            </p>
-
-            <h2 class="section-heading"><span>The</span> Department of <span>CSE</span></h2>
-            <p class="about-text">
-                Computer Science and Engineering (CSE) is an academic program that integrates the field of Computer
-                Engineering and Computer Science. It combines a portfolio of explanation into the basics of computer
-                programming and networking. It deals with hardware, software, and software engineering, including the
-                theory, design, development, and application of software and software systems.
-            </p>
-
-            <h2 class="section-heading">Our <span>College</span></h2>
-            <p class="about-text">
-                Chennai Institute of Technology, a renowned institution consistently ranked among the top in Tamil Nadu,
-                was established with a vision of delivering exceptional education. With strong industry collaborations,
-                the Institute has made a remarkable global impact.
-            </p>
-        </div>
-    </section>
+    
 
     <!-- Events Section -->
     <section id="events" class="events-container">
@@ -119,16 +92,53 @@
                 <div class="event-content">
                     <h3 class="event-title">Non-Technical</h3>
                     <p class="event-description">Experience the vibrant non-technical events at Hackerzi Take a break
-                        from the daily grind and dive into excitement. From conquering leaderboards in BGMI to unleashing
-                        your creativity In Meme Madness Madness and capturing moments in Frame o Focus, there's something
+                        from the daily grind and dive into excitement. From conquering leaderboards in BGMI to
+                        unleashing
+                        your creativity In Meme Madness Madness and capturing moments in Frame o Focus, there's
+                        something
                         for everyone.</p>
-                    <a href="#" class="event-link">Discover Non-Technical Events →</a>
+                    <a href="nontech.html" class="event-link">Discover Non-Technical Events →</a>
                 </div>
                 <div class="event-image">
                     <img src="" alt="Non-Technical Event">
                 </div>
 
             </div>
+        </div>
+    </section>
+
+
+    <!-- About Section -->
+    <section id="about" class="about-container">
+        <div class="about-inner">
+            <h2 class="section-heading"><span>About</span> The Symposium</h2>
+            <p class="about-text">
+                Dextro'25 is hosted by the Department of Computer Science and Business Systems at R.M.D Engineering
+                College
+                , providing students with a diverse range of opportunities to test their skills and knowledge
+                in the field of technology.
+            </p>
+
+            <h2 class="section-heading"><span>The</span> Department of <span>CSBS</span></h2>
+            <p class="about-text">
+                Computer Science and Business Systems (CSBS) is an academic program that integrates the field of
+                Computer
+                Science and Business. This curriculum aims to ensure that the students graduating from the program not
+                only know the core topics of Computer Science but also develop an equal appreciation of Humanities,
+                Management Sciences, and Human Values. The students are also exposed to emerging topics such as
+                Analytics, Machine Learning, Cloud Computing, the Internet of Things, etc., to make them industry ready
+                at the end of four years of study. The students are also exposed to pursue Higher Studies in Reputed
+                Universities Abroad and India with varied specializations and to become a successful Entrepreneur in the
+                IT domain with Innovative Business Skills acquired through the competent curriculum designed by TCS.
+
+            </p>
+
+            <h2 class="section-heading">Our <span>College</span></h2>
+            <p class="about-text">
+                R.M.D Engineering College, a renowned institution consistently ranked among the top in Tamil Nadu,
+                was established with a vision of delivering exceptional education. With strong industry collaborations,
+                the Institute has made a remarkable global impact.
+            </p>
         </div>
     </section>
 
