--- a/nontech.html
+++ b/nontech.html
@@ -36,7 +36,7 @@
 
   <!-- Event Cards Section -->
   <section class="event-cards-container">
-    <h2 class="event-cards-heading">Events</h2>
+    <h2 class="event-cards-heading">Non Technical Events</h2>
     <div class="event-cards-grid">
 
       <!-- Event Card 1 -->
@@ -46,109 +46,19 @@
             alt="Case Analytix">
         </div>
         <div class="event-card-content">
-          <h3 class="event-card-title">Pixel Perfects</h3>
-          <p class="event-card-tags">#TechCaseStudy #CaseAnalytix</p>
-          <p class="event-card-description">Ready to code your way to glory? Join us at Codeathon!</p>
+          <h3 class="event-card-title">Suprise Event</h3>
+          <p class="event-card-tags">#Nontechical #suprise</p>
+          <p class="event-card-description">Suprise Suprise Motherfucker! The king is back !🤯</p>
         </div>
         <div class="event-card-hover-content">
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
-          <p>Category : Individual Event / Group Event</p>
-          <a href="eventdet.html" class="event-card-link">Tap For Details</a>
+          <p>Category : Individual Participants / Group </p>
+          <a href="nontechdet.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
 
-      <!-- Event Card 2 -->
-      <div class="event-card">
-        <div class="event-card-image">
-          <img src="https://pplx-res.cloudinary.com/image/upload/v1739087011/user_uploads/p5jX85XvH81t6U4/image.jpg"
-            alt="Codeathon">
-        </div>
-        <div class="event-card-content">
-          <h3 class="event-card-title">Business Mastery</h3>
-          <p class="event-card-tags">#Business #Create Business</p>
-          <p class="event-card-description">Ready to code your way to glory? Join us at Codeathon!</p>
-        </div>
-        <div class="event-card-hover-content">
-          <p>Time : 08:00 AM</p>
-          <p>Entry Fee : Free</p>
-          <p>Category : Group Event</p>
-          <a href="#" class="event-card-link">Tap For Details</a>
-        </div>
-      </div>
-
-      <!-- Event Card 3 -->
-      <div class="event-card">
-        <div class="event-card-image">
-          <img src="https://i.imgur.com/EXAMPLE3.png" alt="TechTrivia">
-        </div>
-        <div class="event-card-content">
-          <h3 class="event-card-title">Rhetoric Rumble</h3>
-          <p class="event-card-tags">#Debate #QuizTrivia</p>
-          <p class="event-card-description">Dive into TechTrivia and test your tech smarts!</p>
-        </div>
-        <div class="event-card-hover-content">
-          <p>Time : 08:00 AM</p>
-          <p>Entry Fee : Free</p>
-          <p>Category : Individual Event</p>
-          <a href="#" class="event-card-link">Tap For Details</a>
-        </div>
-      </div>
-
-      <!-- Event Card 4 -->
-      <div class="event-card">
-        <div class="event-card-image">
-          <img src="https://i.imgur.com/EXAMPLE4.png" alt="TechTrivia">
-        </div>
-        <div class="event-card-content">
-          <h3 class="event-card-title">Cerebra Quest</h3>
-          <p class="event-card-tags">#TechTrivia #QuizTrivia</p>
-          <p class="event-card-description">Dive into TechTrivia and test your tech smarts!</p>
-        </div>
-        <div class="event-card-hover-content">
-          <p>Time : 08:00 AM</p>
-          <p>Entry Fee : Free</p>
-          <p>Category : Individual Event</p>
-          <a href="#" class="event-card-link">Tap For Details</a>
-        </div>
-      </div>
-
-      <!-- Event Card 5 -->
-      <div class="event-card">
-        <div class="event-card-image">
-          <img src="https://i.imgur.com/EXAMPLE5.png" alt="TechTrivia">
-        </div>
-        <div class="event-card-content">
-          <h3 class="event-card-title">Runtime Terror</h3>
-          <p class="event-card-tags">#TechTrivia #QuizTrivia</p>
-          <p class="event-card-description">Dive into TechTrivia and test your tech smarts!</p>
-        </div>
-        <div class="event-card-hover-content">
-          <p>Time : 08:00 AM</p>
-          <p>Entry Fee : Free</p>
-          <p>Category : Individual Event</p>
-          <a href="#" class="event-card-link">Tap For Details</a>
-        </div>
-      </div>
-
-      <!-- Event Card 6 -->
-      <div class="event-card">
-        <div class="event-card-image">
-          <img src="https://i.imgur.com/EXAMPLE6.png" alt="TechTrivia">
-        </div>
-        <div class="event-card-content">
-          <h3 class="event-card-title">Innovatrix</h3>
-          <p class="event-card-tags">#TechTrivia #QuizTrivia</p>
-          <p class="event-card-description">Dive into TechTrivia and test your tech smarts!</p>
-        </div>
-        <div class="event-card-hover-content">
-          <p>Time : 08:00 AM</p>
-          <p>Entry Fee : Free</p>
-          <p>Category : Individual Event</p>
-          <a href="#" class="event-card-link">Tap For Details</a>
-        </div>
-      </div>
-    </div>
+      
   </section>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="script.js"></script>
