styles are changed

--- a/eventdet6.html
+++ b/eventdet6.html
@@ -33,7 +33,7 @@
                 <div class="event-details-border"></div>
             </div>
             <div class="event-details-content">
-                <h2 class="event-details-title">Pixel Perfects</h2>
+                <h2 class="event-details-title">Innovatrix</h2>
                 <br>
                 <br>
                 <h3 class="event-details-subtitle">Event Description</h3>
@@ -58,7 +58,7 @@
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                  <br>
-                <a href="#" class="event-details-register-button">Register Now</a>
+                <a href="supregister.html" class="event-details-register-button">Register Now</a>
                 
                 <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
             </div>
