--- a/events.html
+++ b/events.html
@@ -54,7 +54,7 @@
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
           <p>Category : Individual Event / Group Event</p>
-          <a href="eventdet.html" class="event-card-link">Tap For Details</a>
+          <a href="eventdet1.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
 
@@ -73,7 +73,7 @@
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
           <p>Category : Group Event</p>
-          <a href="#" class="event-card-link">Tap For Details</a>
+          <a href="eventdet2.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
 
@@ -91,7 +91,7 @@
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
           <p>Category : Individual Event</p>
-          <a href="#" class="event-card-link">Tap For Details</a>
+          <a href="eventdet3.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
 
@@ -109,7 +109,7 @@
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
           <p>Category : Individual Event</p>
-          <a href="#" class="event-card-link">Tap For Details</a>
+          <a href="eventdet4.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
 
@@ -127,7 +127,7 @@
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
           <p>Category : Individual Event</p>
-          <a href="#" class="event-card-link">Tap For Details</a>
+          <a href="eventdet5.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
 
@@ -145,7 +145,7 @@
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
           <p>Category : Individual Event</p>
-          <a href="#" class="event-card-link">Tap For Details</a>
+          <a href="eventdet6.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
     </div>
