--- a/events.html
+++ b/events.html
@@ -42,7 +42,7 @@
       <!-- Event Card 1 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="https://pplx-res.cloudinary.com/image/upload/v1739087011/user_uploads/p5jX85XvH81t6U4/image.jpg"
+          <img src="ppui.jpeg"
             alt="Case Analytix">
         </div>
         <div class="event-card-content">
@@ -77,23 +77,7 @@
         </div>
       </div>
 
-      <!-- Event Card 3 -->
-      <div class="event-card">
-        <div class="event-card-image">
-          <img src="https://i.imgur.com/EXAMPLE3.png" alt="TechTrivia">
-        </div>
-        <div class="event-card-content">
-          <h3 class="event-card-title">Rhetoric Rumble</h3>
-          <p class="event-card-tags">#Debate #QuizTrivia</p>
-          <p class="event-card-description">Dive into TechTrivia and test your tech smarts!</p>
-        </div>
-        <div class="event-card-hover-content">
-          <p>Time : 08:00 AM</p>
-          <p>Entry Fee : Free</p>
-          <p>Category : Individual Event</p>
-          <a href="eventdet3.html" class="event-card-link">Tap For Details</a>
-        </div>
-      </div>
+      
 
       <!-- Event Card 4 -->
       <div class="event-card">
@@ -167,13 +151,13 @@
                 }
             },
             color: {
-                value: '#00FF99' // Changed to the website's cyan
+                value: '#00FFFF' // Changed to the website's cyan
             },
             shape: {
                 type: 'circle',
                 stroke: {
                     width: 0,
-                    color: '#000000'
+                    color: '#00FFFF'
                 },
                 polygon: {
                     nb_sides: 5
@@ -266,7 +250,7 @@
         retina_detect: true,
         config_demo: {
             hide_card: false,
-            background_color: '#b61924',
+            background_color: '#00FFFF',
             background_image: '',
             background_position: '50% 50%',
             background_repeat: 'no-repeat',
