--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero" section id="home">
+    <section class="hero" id="home">
         <div class="hero-content">
             <h1><span>The</span> Symposium <span>Begins Now</span></h1>
             <h1><span>Dextro'25</span></h1>
@@ -111,7 +111,7 @@
     <!-- About Section -->
     <section id="about" class="about-container">
         <div class="about-inner">
-            <h2 class="section-heading"><span>About</span> The Symposium</h2>
+            <h2 class="events-heading"><span>About</span> The Symposium</h2>
             <p class="about-text">
                 Dextro'25 is hosted by the Department of Computer Science and Business Systems at R.M.D Engineering
                 College
@@ -119,7 +119,7 @@
                 in the field of technology.
             </p>
 
-            <h2 class="section-heading"><span>The</span> Department of <span>CSBS</span></h2>
+            <h2 class="events-heading"><span>The</span> Department of <span>CSBS</span></h2>
             <p class="about-text">
                 Computer Science and Business Systems (CSBS) is an academic program that integrates the field of
                 Computer
@@ -133,7 +133,7 @@
 
             </p>
 
-            <h2 class="section-heading">Our <span>College</span></h2>
+            <h2 class="events-heading">Our <span>College</span></h2>
             <p class="about-text">
                 R.M.D Engineering College, a renowned institution consistently ranked among the top in Tamil Nadu,
                 was established with a vision of delivering exceptional education. With strong industry collaborations,
@@ -142,46 +142,51 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact-container">
-        <div class="contact-inner">
-            <h2 class="section-heading">CONTACT <span>US</span></h2>
-            <p class="contact-subheading">Have any queries?</p>
+         <!-- Contact Section -->
+<section id="contact" class="contact-container">
+    <div class="contact-inner">
+        <h2 class="events-heading">CONTACT <span>US</span></h2>
+        <p class="contact-subheading">Have any queries? We're here to help!</p>
 
-            <div class="contact-grid">
-                <div class="contact-info">
-                    <div class="staff-coordinator">
-                        <h3>Staff Coordinator</h3>
-                        <p>Dr Sabarishwaran</p>
-                        <p><a href="tel:+919500044401">+91 95000 44401</a></p>
-                    </div>
+        <div class="contact-grid">
+            <!-- President -->
+            <div class="contact-info">
+                <h3>President</h3>
+                <p>GOKUL KANNA ML</p>
+                <p><a href="tel:+919940290789">+91 9940290789</a></p>
+            </div>
 
-                    <div class="event-coordinator">
-                        <h3>Event Coordinator</h3>
-                        <p>Rishikesh KA <a href="tel:+918610253720">+91 86102 53720</a></p>
-                        <p>Rishekesh R <a href="tel:+917338702688">+91 73387 02688</a></p>
-                        <p>Darshana V <a href="tel:+918764869184">+91 87648 69184</a></p>
-                    </div>
+            <!-- Vice President -->
+            <div class="contact-info">
+                <h3>Vice President</h3>
+                <p>Sanjay G S<br> <a href="tel:+919361471806">+91 9361471806</a></p>
+                <p>Charan T<br> <a href="tel:+917815814876">+91 7815814876</a></p>
+            </div>
 
-                    <div class="registration-helpdesk">
-                        <h3>Registration and Help Desk</h3>
-                        <p>Aarthi E <a href="tel:+919791580616">+91 97915 80616</a></p>
-                    </div>
-                </div>
+            <!-- Event Coordinators -->
+            <div class="contact-info">
+                <h3>Event Coordinators</h3>
+                <p>Ms. SriLakshmi Ch<br> <a href="tel:+919677139461">+91 9677139461</a></p>
+                <p>Ms. Monica Lakshmi R<br> <a href="tel:+917708208016">+91 7708208016</a></p>
+            </div>
 
-                <div class="contact-form">
-                    <input type="email" placeholder="Email">
-                    <input type="tel" placeholder="Phone Number">
-                    <textarea placeholder="Message" rows="5"></textarea>
-                    <button type="submit">Submit</button>
-                </div>
+            <!-- Registration and Help Desk -->
+            <div class="contact-info">
+                <h3>Registration & Help Desk</h3>
+                <p>Tamil Kumaran S<br> <a href="tel:+916374264988">+91 6374264988</a></p>
+            </div>
 
-                <div class="contact-image">
-                    <img src="" alt="Contact Illustration">
-                </div>
+            <!-- Support & Email -->
+            <div class="contact-info">
+                <h3>Support & Email</h3>
+                <p>Email us at:</p>
+                <p><a href="mailto:dextro25@gmail.com">dextro25@gmail.com</a></p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
+
 
     <!-- Social Media Floating Bar -->
     <div class="social-media-bar">
@@ -197,7 +202,7 @@
     <!-- Footer Section -->
     <footer class="footer">
         <div class="footer-container">
-            <p>&copy; 2025 Dextro'25 Symposium. All rights reserved.</p>
+            <p>&copy; <span id="current-year">2025</span> Dextro'25 Symposium. All rights reserved.</p>
         </div>
     </footer>
 
@@ -218,13 +223,13 @@
                     }
                 },
                 color: {
-                    value: '#00FF99' // Changed to the website's cyan
+                    value: '#00FFFF' // Changed to the website's cyan
                 },
                 shape: {
                     type: 'circle',
                     stroke: {
                         width: 0,
-                        color: '#000000'
+                        color: '#00FFFF'
                     },
                     polygon: {
                         nb_sides: 5
@@ -258,7 +263,7 @@
                 line_linked: {
                     enable: true,
                     distance: 150,
-                    color: '#00FF99', // Changed to the website's cyan
+                    color: '#00FFFF', // Changed to the website's cyan
                     opacity: 0.4,
                     width: 1
                 },
@@ -317,7 +322,7 @@
             retina_detect: true,
             config_demo: {
                 hide_card: false,
-                background_color: '#b61924',
+                background_color: '#00FFFF',
                 background_image: '',
                 background_position: '50% 50%',
                 background_repeat: 'no-repeat',
