--- a/nontechdet.html
+++ b/nontechdet.html
@@ -85,14 +85,14 @@
         particlesJS("event-details-particles", {
             particles: {
                 number: { value: 100, density: { enable: true, value_area: 800 } },
-                color: { value: "#00FF99" },
+                color: { value: "#00FFFF" },
                 shape: { type: "circle" },
                 opacity: { value: 0.5, random: true },
                 size: { value: 3, random: true },
                 line_linked: {
                     enable: true,
                     distance: 150,
-                    color: "#00FF99",
+                    color: "#00FFFF",
                     opacity: 0.4,
                     width: 1
                 },
