--- a/eventdet2.html
+++ b/eventdet2.html
@@ -59,7 +59,7 @@
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                  <br>
-                <a href="supregister.html" class="event-details-register-button">Register Now</a>
+                <a href="eventdet2form.html" class="event-details-register-button">Register Now</a>
                 
                 <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
             </div>
