--- a/eventdet5.html
+++ b/eventdet5.html
@@ -58,7 +58,7 @@
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                  <br>
-                <a href="supregister.html" class="event-details-register-button">Register Now</a>
+                <a href="eventdet5form.html" class="event-details-register-button">Register Now</a>
                 
                 <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
             </div>
