--- a/nontech.html
+++ b/nontech.html
@@ -30,7 +30,14 @@
 
   <nav>
     <ul>
-        <li><a href="index.html" class="nav-link"><--Home</a></li>
+        <button class="button" onclick="goBack()" >
+          <svg class="svgIcon" viewBox="0 0 384 512">
+            <path
+              d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
+            ></path>
+          </svg>
+
+        </button>
     </ul>
 </nav>
 
@@ -89,6 +96,9 @@
     /* @dom-id  the id of the canvas element
     /* @params  the js object containing the parameters
     */
+    function goBack() {
+        window.history.back(); // Takes the user to the previous page
+    }
     particlesJS('particles-js', {
         particles: {
             number: {
