--- a/eventdet6form.html
+++ b/eventdet6form.html
@@ -54,12 +54,7 @@
             <input type="text" id="college" name="college" required>
 
             <label for="year">Year:</label>
-            <select id="year" name="year" required>
-              <option value="" disabled selected>Select Year</option>
-              <option value="1st Year">1st Year</option>
-              <option value="2nd Year">2nd Year</option>
-              <option value="3rd Year">3rd Year</option>
-            </select>
+            <input type="text" id="year" name="year" required>
 
             <label for="participantsCount">Number of Participants:</label>
             <input type="number" id="participantsCount" name="participantsCount" required>
