--- a/eventdet1form.html
+++ b/eventdet1form.html
@@ -19,65 +19,6 @@
       height: 50vh;
       z-index: -1;
     }
-    .button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: rgb(20, 20, 20);
-    border: none;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
-    cursor: pointer;
-    transition: 0.3s;
-    overflow: hidden;
-    position: relative;
-    margin-left: 20px;
-    margin-top: 10px;
-}
-
-.svgIcon {
-    width: 12px;
-    transform: rotate(270deg); /* Always face left */
-    transition: 0.3s;
-}
-
-.svgIcon path {
-    fill: white;
-}
-
-.button:hover {
-    width: 100px;  /* Expand width for text */
-    border-radius: 50px;
-    transition: 0.3s;
-    background-color: #00FF99;
-    align-items: center;
-    justify-content: center;
-}
-
-/* Hide arrow when hovering */
-.button:hover .svgIcon {
-    opacity: 0;
-    transform: translateX(-10px); /* Moves it left before disappearing */
-    transition: 0.3s;
-}
-
-.button::before {
-    position: absolute;
-    content: "Back"; /* Set text */
-    color: white;
-    font-size: 0px;
-    transition: 0.3s;
-}
-
-.button:hover::before {
-    font-size: 13px;
-    opacity: 1;
-    transition: 0.3s;
-}
-
   </style>
 </head>
 
@@ -88,16 +29,9 @@
 
   <nav>
     <ul>
-        <button class="button" onclick="goBack()" >
-          <svg class="svgIcon" viewBox="0 0 384 512">
-            <path
-              d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"
-            ></path>
-          </svg>
-
-        </button>
+      <li><a href="index.html" class="nav-link"><--Home</a></li>
     </ul>
-</nav>
+  </nav>
 
   <!-- Event Registration Form -->
   <section class="event-cards-container">
@@ -120,7 +54,12 @@
             <input type="text" id="college" name="college" required>
 
             <label for="year">Year:</label>
-            <input type="text" id="year" name="year" required>
+            <select id="year" name="year" required>
+              <option value="" disabled selected>Select Year</option>
+              <option value="1st Year">1st Year</option>
+              <option value="2nd Year">2nd Year</option>
+              <option value="3rd Year">3rd Year</option>
+            </select>
 
             <label for="participantsCount">Number of Participants:</label>
             <input type="number" id="participantsCount" name="participantsCount" required>
@@ -136,10 +75,6 @@
   <script src="script.js"></script>
   
   <script>
-
-function goBack() {
-        window.history.back(); // Takes the user to the previous page
-    }
     document.getElementById("registrationForm").addEventListener("submit", function (event) {
       event.preventDefault();
 
