done with some changes

--- a/eventdet1.html
+++ b/eventdet1.html
@@ -32,8 +32,8 @@
         
         <div class="event-details-card">
             <div class="event-details-image">
-                <img src="https://pplx-res.cloudinary.com/image/upload/v1739087011/user_uploads/p5jX85XvH81t6U4/image.jpg"
-                    alt="Case Analytix">
+                <img src="ui.jpg"
+                    alt="Pixel Perfects" >
                 <div class="event-details-border"></div>
             </div>
             <div class="event-details-content">
