--- a/nontech.html
+++ b/nontech.html
@@ -49,13 +49,13 @@
       <!-- Event Card 1 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="https://pplx-res.cloudinary.com/image/upload/v1739087011/user_uploads/p5jX85XvH81t6U4/image.jpg"
+          <img src="surp.jpg"
             alt="Case Analytix">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Suprise Event</h3>
-          <p class="event-card-tags">#Nontechical #suprise</p>
-          <p class="event-card-description">Suprise Suprise Motherfucker! The king is back !🤯</p>
+          <p class="event-card-tags">#UnveilTheThrill, EmbraceTheMystery</p>
+          <p class="event-card-description">#UnveilTheThrill 🔥 – No clues, just vibes!🤯</p>
         </div>
         <div class="event-card-hover-content">
           <p>Time : 08:00 AM</p>
@@ -68,7 +68,7 @@
       <!-- Event Card 3 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="https://i.imgur.com/EXAMPLE3.png" alt="TechTrivia">
+          <img src="deb.jpeg" alt="TechTrivia">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Rhetoric Rumble</h3>
