--- a/Nontechdetform.html
+++ b/Nontechdetform.html
@@ -11,15 +11,75 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <style>
-    /* Add styles for the particle container */
-    #particles-js {
-      position: fixed;
-      width: 100%;
-      height: 50vh;
-      z-index: -1;
-    }
-  </style>
+    <style>
+      /* Add styles for the particle container */
+      #particles-js {
+        position: fixed;
+        width: 100%;
+        height: 50vh;
+        z-index: -1;
+      }
+  
+      /* From Uiverse.io by vinodjangid07 */ 
+  .button {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: rgb(20, 20, 20);
+      border: none;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
+      cursor: pointer;
+      transition: 0.3s;
+      overflow: hidden;
+      position: relative;
+      margin-left: 20px;
+      margin-top: 10px;
+  }
+  
+  .svgIcon {
+      width: 12px;
+      transform: rotate(270deg); /* Always face left */
+      transition: 0.3s;
+  }
+  
+  .svgIcon path {
+      fill: white;
+  }
+  
+  .button:hover {
+      width: 100px;  /* Expand width for text */
+      border-radius: 50px;
+      transition: 0.3s;
+      background-color: #00FF99;
+      align-items: center;
+      justify-content: center;
+  }
+  
+  /* Hide arrow when hovering */
+  .button:hover .svgIcon {
+      opacity: 0;
+      transform: translateX(-10px); /* Moves it left before disappearing */
+      transition: 0.3s;
+  }
+  
+  .button::before {
+      position: absolute;
+      content: "Back"; /* Set text */
+      color: white;
+      font-size: 0px;
+      transition: 0.3s;
+  }
+  
+  .button:hover::before {
+      font-size: 13px;
+      opacity: 1;
+      transition: 0.3s;
+  }
+    </style>
 </head>
 
 <body>
@@ -75,6 +135,10 @@
   <script src="script.js"></script>
   
   <script>
+
+function goBack() {
+        window.history.back(); // Takes the user to the previous page
+    }
     document.getElementById("registrationForm").addEventListener("submit", function (event) {
       event.preventDefault();
 
@@ -96,18 +160,18 @@
       })
       .then(response => {
         if (response.ok) {
-          return response.json();
+            return response.json();
         }
         throw new Error("Registration failed");
-      })
-      .then(data => {
-        alert("Registration successful!");
-        document.getElementById("registrationForm").reset();
-      })
-      .catch(error => {
+    })
+    .then(data => {
+        // ✅ Redirect to success page after registration
+        window.location.href = "success.html";
+    })
+    .catch(error => {
         alert("Error submitting form. Please try again.");
-      });
     });
+});
   </script>
 
 </body>
