--- a/eventdet6.html
+++ b/eventdet6.html
@@ -28,7 +28,7 @@
         <div id="event-details-particles"></div>
         <div class="event-details-card">
             <div class="event-details-image">
-                <img src="https://pplx-res.cloudinary.com/image/upload/v1739087011/user_uploads/p5jX85XvH81t6U4/image.jpg"
+                <img src="inn.jpg"
                     alt="Case Analytix">
                 <div class="event-details-border"></div>
             </div>
