--- a/events.html
+++ b/events.html
@@ -49,7 +49,7 @@
       <!-- Event Card 1 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="ppui.jpeg"
+          <img src="ux.jpg"
             alt="Case Analytix">
         </div>
         <div class="event-card-content">
@@ -68,7 +68,7 @@
       <!-- Event Card 2 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="https://pplx-res.cloudinary.com/image/upload/v1739087011/user_uploads/p5jX85XvH81t6U4/image.jpg"
+          <img src="bm.jpeg"
             alt="Codeathon">
         </div>
         <div class="event-card-content">
@@ -89,7 +89,7 @@
       <!-- Event Card 4 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="https://i.imgur.com/EXAMPLE4.png" alt="TechTrivia">
+          <img src="cq.jpeg" alt="TechTrivia">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Cerebra Quest</h3>
@@ -107,7 +107,7 @@
       <!-- Event Card 5 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="https://i.imgur.com/EXAMPLE5.png" alt="TechTrivia">
+          <img src="co.jpeg" alt="TechTrivia">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Runtime Terror</h3>
@@ -125,7 +125,7 @@
       <!-- Event Card 6 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="https://i.imgur.com/EXAMPLE6.png" alt="TechTrivia">
+          <img src="bulb.jpg" alt="TechTrivia">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Innovatrix</h3>
