social icons added

--- a/index.html
+++ b/index.html
@@ -211,11 +211,10 @@
 
     <!-- Social Media Floating Bar -->
     <div class="social-media-bar">
-        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+        <a href="mailto:dextero25@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
         <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
     </div>
+    
 
     <!-- Back to Top Button -->
     <button onclick="topFunction()" id="backToTopBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
