--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024">
-    <title>Dextro'25 Symposium</title>
+    <title>Dextero'25 Symposium</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -39,8 +39,8 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <h1><span>The</span> Symposium <span>Begins Now</span></h1>
-            <h1><span>Dextro'25</span></h1>
-            <p class="tagline">Explore the future of technology at Dextro'25!</p>
+            <h1><span>Dextero'25</span></h1>
+            <p class="tagline">Explore the future of technology at Dextero'25!</p>
         </div>
     </section>
 
@@ -114,7 +114,7 @@
         <div class="about-inner">
             <h2 class="events-heading"><span>About</span> The Symposium</h2>
             <p class="about-text">
-                Dextro'25 is hosted by the Department of Computer Science and Business Systems at R.M.D Engineering
+                Dextero'25 is hosted by the Department of Computer Science and Business Systems at R.M.D Engineering
                 College
                 , providing students with a diverse range of opportunities to test their skills and knowledge
                 in the field of technology.
@@ -201,7 +201,7 @@
             <div class="contact-info">
                 <h3>Support & Email</h3>
                 <p>Email us at:</p>
-                <p><a href="mailto:dextro25@gmail.com">dextro25@gmail.com</a></p>
+                <p><a href="mailto:dextero25@gmail.com">dextero25@gmail.com</a></p>
             </div>
         </div>
     </div>
@@ -222,7 +222,7 @@
     <!-- Footer Section -->
     <footer class="footer">
         <div class="footer-container">
-            <p>&copy; <span id="current-year">2025</span> Dextro'25 Symposium. All rights reserved.</p>
+            <p>&copy; <span id="current-year">2025</span> Dextero'25 Symposium. All rights reserved.</p>
         </div>
     </footer>
 
