--- a/eventdet1.html
+++ b/eventdet1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024">
-    <title>Event Details - Case Analytix</title>
+    <title>Event Details</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -42,24 +42,23 @@
                 <br>
                 <h3 class="event-details-subtitle">Event Description</h3>
                 <p class="event-details-description">
-                    Welcome to Pixel Perfects, an immersive case study competition rooted in real-world scenarios. Apply
-                    your
-                    knowledge to solve problems faced by tech companies and propose well-thought-out solutions.
+                    Welcome to Pixel Perfects!, the ultimate chaotic and creative UI/UX design challenge! Participants will battle through three fun-filled rounds—sketching absurd UI ideas, acting out microservices like a soap opera, and building interactive prototypes with bizarre twists. Get ready for a competition where creativity, humor, and unpredictability reign supreme!.
                 </p>
                 <div class="event-details-info">
-                    <p>Fee: <span class="event-details-value">Free Entry</span></p>
+                    <p>Fee: <span class="event-details-value">Free Entry</span></p><br>
 
-                    <p>Category: <span class="event-details-value"> Individual And Team Event</span></p>
+                    
                 </div>
 
-                <h3 class="event-details-subtitle">Contact</h3>
+                <h3 class="event-details-subtitle">Contact</h3><br>
 
                 <div class="event-details-contact">
-                    <p>KAVIN S: <span class="event-details-value"> 8148741126</span></p>
+                    <p>Kavin S: <span class="event-details-value">+91 8148741126</span></p><br>
+                    <p>Thanush S: <span class="event-details-value"> +91 8667589669</span></p><br>
                 </div>
                 <div class="event-details-info">
-                    <p>Date: <span class="event-details-value">2025-03-17</span></p>
-                    <p>Time: <span class="event-details-value">09:30 AM</span></p>
+                    <p>Date: <span class="event-details-value">2025-03-17</span></p><br>
+                    <p>Time: <span class="event-details-value">09:30 AM</span></p><br>  
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                 <br>
@@ -73,11 +72,10 @@
         <div class="event-rules-container">
             <h2 class="event-rules-heading">RULES AND REGULATIONS</h2>
             <ul class="event-rules-list">
-                <li>Participants should bring their laptops.</li>
-                <li>Team capacity: 2 members.</li>
-                <li>45 minutes for discussion and offline PPT preparation.</li>
-                <li>Presentation duration: 12 minutes followed by Q&A.</li>
-                <li>Engaging in malicious activities will lead to immediate disqualification.</li>
+                <li>Maximum of 3 members.</li>
+                <li>Rounds3 interactive and unpredictable rounds.</li>
+                <li>Participants must bring their own laptops (for the Figma round)</li>
+                <li>Surprise twists will be introduced; judged on creativity, humor, uniqueness, and engagement.</li>
             </ul>
         </div>
     </section>
