--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1024">
-  <title>Event Cards</title>
+  <title>Event</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -54,8 +54,8 @@
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Pixel Perfects</h3>
-          <p class="event-card-tags">#TechCaseStudy #CaseAnalytix</p>
-          <p class="event-card-description">Ready to code your way to glory? Join us at Codeathon!</p>
+          <p class="event-card-tags"> #CreativeClash #UXMadness</p>
+          <p class="event-card-description">Design, Innovate, and Embrace the Chaos!</p>
         </div>
         <div class="event-card-hover-content">
           <p>Time : 08:00 AM</p>
@@ -73,8 +73,8 @@
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Business Mastery</h3>
-          <p class="event-card-tags">#Business #Create Business</p>
-          <p class="event-card-description">Ready to code your way to glory? Join us at Codeathon!</p>
+          <p class="event-card-tags">#BizBrilliance #MarketMinds</p>
+          <p class="event-card-description">Strategize, Pitch, and Conquer the Market!</p>
         </div>
         <div class="event-card-hover-content">
           <p>Time : 08:00 AM</p>
@@ -93,8 +93,8 @@
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Cerebra Quest</h3>
-          <p class="event-card-tags">#TechTrivia #QuizTrivia</p>
-          <p class="event-card-description">Dive into TechTrivia and test your tech smarts!</p>
+          <p class="event-card-tags">#BrainBattle #MindMasters</p>
+          <p class="event-card-description">Unleash Your Inner Genius and Conquer the Ultimate Mind Challenge</p>
         </div>
         <div class="event-card-hover-content">
           <p>Time : 08:00 AM</p>
@@ -111,8 +111,8 @@
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Runtime Terror</h3>
-          <p class="event-card-tags">#TechTrivia #QuizTrivia</p>
-          <p class="event-card-description">Dive into TechTrivia and test your tech smarts!</p>
+          <p class="event-card-tags">#CodeOrCrumble #DebuggingDuel</p>
+          <p class="event-card-description">Code, Debug, and Survive the Mayhem!</p>
         </div>
         <div class="event-card-hover-content">
           <p>Time : 08:00 AM</p>
@@ -129,8 +129,8 @@
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Innovatrix</h3>
-          <p class="event-card-tags">#TechTrivia #QuizTrivia</p>
-          <p class="event-card-description">Dive into TechTrivia and test your tech smarts!</p>
+          <p class="event-card-tags"> #TechTalks #FutureVision</p>
+          <p class="event-card-description">Present Your Ideas, Inspire Innovation, and Shape the Future!</p>
         </div>
         <div class="event-card-hover-content">
           <p>Time : 08:00 AM</p>
