--- a/eventdet3.html
+++ b/eventdet3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024">
-    <title>Event Details - Case Analytix</title>
+    <title>Event Details</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
                 
                 <div class="event-details-contact">
                     <p>Tharun C R : <span class="event-details-value">+91 9962800117</span></p><br>
-                    <p>Adithya S : <span class="event-details-value">+91 6374832311</span></p>
+                    <p>Charukesh S : <span class="event-details-value">+91 8248964895</span></p>
                 </div>
                 <br>
                 <div class="event-details-info">
