--- a/index.html
+++ b/index.html
@@ -78,13 +78,11 @@
 
             <div class="event-section technical">
                 <div class="event-image">
-                    <img src="" alt="Technical Event">
+                    <img src="tech.jpg" alt="Technical Event">
                 </div>
                 <div class="event-content">
                     <h3 class="event-title">Technical</h3>
-                    <p class="event-description">Our technical events cover a wide range of domains like CyberSecurity,
-                        Artificial Intelligence, UI/UX etc making sure that everyone gets a glimpse of the wide
-                        technological world that we are catering to.</p>
+                    <p class="event-description">Unleash your innovation and problem-solving skills in our cutting-edge technical challenges! From coding competitions to AI-driven hackathons, gear up to showcase your expertise and creativity.</p>
                     <a href="events.html" class="event-link">Explore Technical Events →</a>
                 </div>
             </div>
@@ -92,16 +90,11 @@
             <div class="event-section non-technical">
                 <div class="event-content">
                     <h3 class="event-title">Non-Technical</h3>
-                    <p class="event-description">Experience the vibrant non-technical events at Hackerzi Take a break
-                        from the daily grind and dive into excitement. From conquering leaderboards in BGMI to
-                        unleashing
-                        your creativity In Meme Madness Madness and capturing moments in Frame o Focus, there's
-                        something
-                        for everyone.</p>
+                    <p class="event-description">Step into the world of fun and excitement with our engaging non-technical events! Whether it's strategy, creativity, or just pure entertainment, there's something for everyone to enjoy.</p>
                     <a href="nontech.html" class="event-link">Discover Non-Technical Events →</a>
                 </div>
                 <div class="event-image">
-                    <img src="" alt="Non-Technical Event">
+                    <img src="nontech.jpg" alt="Non-Technical Event">
                 </div>
 
             </div>
@@ -212,7 +205,7 @@
     <!-- Social Media Floating Bar -->
     <div class="social-media-bar">
         <a href="mailto:dextero25@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
-        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/dextero_25/" class="social-icon"><i class="fab fa-instagram"></i></a>
     </div>
     
 
