--- a/nontech.html
+++ b/nontech.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1024">
-  <title>Event Cards</title>
+  <title>Event</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -72,8 +72,8 @@
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Rhetoric Rumble</h3>
-          <p class="event-card-tags">#Debate #QuizTrivia</p>
-          <p class="event-card-description">Dive into TechTrivia and test your tech smarts!</p>
+          <p class="event-card-tags">#Debate #Battle</p>
+          <p class="event-card-description">Clash of Ideas, Battle of Wits—Let Your<br>Voice Dominate!</p>
         </div>
         <div class="event-card-hover-content">
           <p>Time : 08:00 AM</p>
