--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024">
     <title>Dextero'25 Symposium</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -83,7 +83,7 @@
                 <div class="event-content">
                     <h3 class="event-title">Technical</h3>
                     <p class="event-description">Unleash your innovation and problem-solving skills in our cutting-edge technical challenges! From coding competitions to AI-driven hackathons, gear up to showcase your expertise and creativity.</p>
-                    <a href="events.html" class="event-link">Explore Technical Events →</a>
+                    <a href="./src/technical_events.html" class="event-link">Explore Technical Events →</a>
                 </div>
             </div>
 
@@ -91,7 +91,7 @@
                 <div class="event-content">
                     <h3 class="event-title">Non-Technical</h3>
                     <p class="event-description">Step into the world of fun and excitement with our engaging non-technical events! Whether it's strategy, creativity, or just pure entertainment, there's something for everyone to enjoy.</p>
-                    <a href="nontech.html" class="event-link">Discover Non-Technical Events →</a>
+                    <a href="./src/nontechnical_events.html" class="event-link">Discover Non-Technical Events →</a>
                 </div>
                 <div class="event-image">
                     <img src="nontech.jpg" alt="Non-Technical Event">
