--- a/src/runtime_error.html
+++ b/src/runtime_error.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024">
     <title>Event Details</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -28,7 +28,7 @@
         <div id="event-details-particles"></div>
         <div class="event-details-card">
             <div class="event-details-image">
-                <img src="cod.jpeg"
+                <img src="../res/runtime_big.jpeg"
                     alt="Case Analytix">
                 <div class="event-details-border"></div>
             </div>
@@ -58,7 +58,7 @@
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                  <br>
-                <a href="eventdet5form.html" class="event-details-register-button">Register Now</a>
+                <a href="../forms/runtime_error.html" class="event-details-register-button">Register Now</a>
                 
                 <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
             </div>
