--- a/src/technical_events.html
+++ b/src/technical_events.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1024">
   <title>Event</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -49,7 +49,7 @@
       <!-- Event Card 1 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="ux.jpg"
+          <img src="../res/tech_main.jpg"
             alt="Case Analytix">
         </div>
         <div class="event-card-content">
@@ -61,15 +61,15 @@
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
           <p>Category : Individual Event / Group Event</p>
-          <a href="eventdet1.html" class="event-card-link">Tap For Details</a>
+          <a href="./pixel_perfect.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
 
       <!-- Event Card 2 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="bm.jpeg"
-            alt="Codeathon">
+          <img src="../res/business_small.jpeg"
+            alt="Business Mastery">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Business Mastery</h3>
@@ -80,7 +80,7 @@
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
           <p>Category : Group Event</p>
-          <a href="eventdet2.html" class="event-card-link">Tap For Details</a>
+          <a href="./business_mastery.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
 
@@ -89,7 +89,7 @@
       <!-- Event Card 4 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="cq.jpeg" alt="TechTrivia">
+          <img src="../res/cerebra_small.jpeg" alt="TechTrivia">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Cerebra Quest</h3>
@@ -100,14 +100,14 @@
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
           <p>Category : Individual Event</p>
-          <a href="eventdet4.html" class="event-card-link">Tap For Details</a>
+          <a href="./cerebra_quest.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
 
       <!-- Event Card 5 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="co.jpeg" alt="TechTrivia">
+          <img src="../res/runtime_small.jpeg" alt="TechTrivia">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Runtime Terror</h3>
@@ -118,14 +118,14 @@
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
           <p>Category : Individual Event</p>
-          <a href="eventdet5.html" class="event-card-link">Tap For Details</a>
+          <a href="./runtime_error.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
 
       <!-- Event Card 6 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="bulb.jpg" alt="TechTrivia">
+          <img src="../res/innovatrix_small.jpg" alt="TechTrivia">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Innovatrix</h3>
@@ -136,7 +136,7 @@
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
           <p>Category : Individual Event</p>
-          <a href="eventdet6.html" class="event-card-link">Tap For Details</a>
+          <a href="./innovatrix.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
     </div>
