--- a/forms/pixel_perfect.html
+++ b/forms/pixel_perfect.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event Registration</title>
-  <link rel="stylesheet" href="regi.css">
+  <link rel="stylesheet" href="../styles/regi.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -38,6 +38,7 @@
     position: relative;
     margin-left: 20px;
     margin-top: 10px;
+    outline: none;
 }
 
 .svgIcon {
@@ -86,6 +87,7 @@
 
   <!-- Particle Background -->
   <div id="particles-js"></div>
+
   <nav>
     <ul>
         <button class="button" onclick="goBack()" >
@@ -101,7 +103,7 @@
 
   <!-- Event Registration Form -->
   <section class="event-cards-container">
-    <h2 class="event-cards-heading">Cerebra Quest Registration</h2>
+    <h2 class="event-cards-heading">Pixel Perfects Registration</h2>
 
     <section id="events" class="events-container">
       <div class="events-inner">
@@ -130,7 +132,7 @@
             <label for="participantsCount">Number of Participants:</label>
             <input type="number" id="participantsCount" name="participantsCount" required>
 
-            <button type="submit">Register</button>
+            <button type="submit" >Register</button>
           </form>
         </div>
       </div>
@@ -146,25 +148,25 @@
       window.history.back();
     }
     document.getElementById("registrationForm").addEventListener("submit", function (event) {
-      event.preventDefault();
+    event.preventDefault();
 
-      const formData = {
+    const formData = {
         participantName: document.getElementById("participantName").value,
         email: document.getElementById("email").value,
         phoneNumber: document.getElementById("phoneNumber").value,
         college: document.getElementById("college").value,
         year: document.getElementById("year").value,
         participantsCount: parseInt(document.getElementById("participantsCount").value)
-      };
+    };
 
-      fetch("https://courageous-simplicity-production.up.railway.app/quiz", {
+    fetch("https://courageous-simplicity-production.up.railway.app/uiux", {
         method: "POST",
         headers: {
-          "Content-Type": "application/json"
+            "Content-Type": "application/json"
         },
         body: JSON.stringify(formData)
-      })
-      .then(response => {
+    })
+    .then(response => {
         if (response.ok) {
             return response.json();
         }
@@ -178,6 +180,7 @@
         alert("Error submitting form. Please try again.");
     });
 });
+
   </script>
 
 </body>
