--- a/forms/surprise_event.html
+++ b/forms/surprise_event.html
@@ -5,82 +5,81 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event Registration</title>
-  <link rel="stylesheet" href="regi.css">
+  <link rel="stylesheet" href="../styles/regi.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <style>
-    /* Add styles for the particle container */
-    #particles-js {
-      position: fixed;
-      width: 100%;
-      height: 50vh;
-      z-index: -1;
-    }
-
-    /* From Uiverse.io by vinodjangid07 */ 
-.button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: rgb(20, 20, 20);
-    border: none;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
-    cursor: pointer;
-    transition: 0.3s;
-    overflow: hidden;
-    position: relative;
-    margin-left: 20px;
-    margin-top: 10px;
-    outline: none;
-}
-
-.svgIcon {
-    width: 12px;
-    transform: rotate(270deg); /* Always face left */
-    transition: 0.3s;
-}
-
-.svgIcon path {
-    fill: white;
-}
-
-.button:hover {
-    width: 100px;  /* Expand width for text */
-    border-radius: 50px;
-    transition: 0.3s;
-    background-color: #00FF99;
-    align-items: center;
-    justify-content: center;
-}
-
-/* Hide arrow when hovering */
-.button:hover .svgIcon {
-    opacity: 0;
-    transform: translateX(-10px); /* Moves it left before disappearing */
-    transition: 0.3s;
-}
-
-.button::before {
-    position: absolute;
-    content: "Back"; /* Set text */
-    color: white;
-    font-size: 0px;
-    transition: 0.3s;
-}
-
-.button:hover::before {
-    font-size: 13px;
-    opacity: 1;
-    transition: 0.3s;
-}
-  </style>
+    <style>
+      /* Add styles for the particle container */
+      #particles-js {
+        position: fixed;
+        width: 100%;
+        height: 50vh;
+        z-index: -1;
+      }
+  
+      /* From Uiverse.io by vinodjangid07 */ 
+  .button {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: rgb(20, 20, 20);
+      border: none;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
+      cursor: pointer;
+      transition: 0.3s;
+      overflow: hidden;
+      position: relative;
+      margin-left: 20px;
+      margin-top: 10px;
+  }
+  
+  .svgIcon {
+      width: 12px;
+      transform: rotate(270deg); /* Always face left */
+      transition: 0.3s;
+  }
+  
+  .svgIcon path {
+      fill: white;
+  }
+  
+  .button:hover {
+      width: 100px;  /* Expand width for text */
+      border-radius: 50px;
+      transition: 0.3s;
+      background-color: #00FF99;
+      align-items: center;
+      justify-content: center;
+  }
+  
+  /* Hide arrow when hovering */
+  .button:hover .svgIcon {
+      opacity: 0;
+      transform: translateX(-10px); /* Moves it left before disappearing */
+      transition: 0.3s;
+  }
+  
+  .button::before {
+      position: absolute;
+      content: "Back"; /* Set text */
+      color: white;
+      font-size: 0px;
+      transition: 0.3s;
+  }
+  
+  .button:hover::before {
+      font-size: 13px;
+      opacity: 1;
+      transition: 0.3s;
+  }
+    </style>
 </head>
 
 <body>
@@ -103,7 +102,7 @@
 
   <!-- Event Registration Form -->
   <section class="event-cards-container">
-    <h2 class="event-cards-heading">Pixel Perfects Registration</h2>
+    <h2 class="event-cards-heading">Surprise Event Registration</h2>
 
     <section id="events" class="events-container">
       <div class="events-inner">
@@ -132,7 +131,7 @@
             <label for="participantsCount">Number of Participants:</label>
             <input type="number" id="participantsCount" name="participantsCount" required>
 
-            <button type="submit" >Register</button>
+            <button type="submit">Register</button>
           </form>
         </div>
       </div>
@@ -144,29 +143,29 @@
   
   <script>
 
-    function goBack() {
-      window.history.back();
+function goBack() {
+        window.history.back(); // Takes the user to the previous page
     }
     document.getElementById("registrationForm").addEventListener("submit", function (event) {
-    event.preventDefault();
+      event.preventDefault();
 
-    const formData = {
+      const formData = {
         participantName: document.getElementById("participantName").value,
         email: document.getElementById("email").value,
         phoneNumber: document.getElementById("phoneNumber").value,
         college: document.getElementById("college").value,
         year: document.getElementById("year").value,
         participantsCount: parseInt(document.getElementById("participantsCount").value)
-    };
+      };
 
-    fetch("https://courageous-simplicity-production.up.railway.app/uiux", {
+      fetch("https://courageous-simplicity-production.up.railway.app/surprise", {
         method: "POST",
         headers: {
-            "Content-Type": "application/json"
+          "Content-Type": "application/json"
         },
         body: JSON.stringify(formData)
-    })
-    .then(response => {
+      })
+      .then(response => {
         if (response.ok) {
             return response.json();
         }
@@ -180,7 +179,6 @@
         alert("Error submitting form. Please try again.");
     });
 });
-
   </script>
 
 </body>
