--- a/src/pixel_perfect.html
+++ b/src/pixel_perfect.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024">
     <title>Event Details</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -32,7 +32,7 @@
         
         <div class="event-details-card">
             <div class="event-details-image">
-                <img src="ui.jpg"
+                <img src="../res/pixel_big.jpg"
                     alt="Pixel Perfects" >
                 <div class="event-details-border"></div>
             </div>
@@ -62,7 +62,7 @@
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                 <br>
-                <a href="eventdet1form.html" class="event-details-register-button">Register Now</a>
+                <a href="../forms/pixel_perfect_form.html" class="event-details-register-button">Register Now</a>
 
                 <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
             </div>
