--- a/src/nontechnical_events.html
+++ b/src/nontechnical_events.html
@@ -79,7 +79,7 @@
           <p>Time : 08:00 AM</p>
           <p>Entry Fee : Free</p>
           <p>Category : Individual Event</p>
-          <a href=./rhetoric_rumble.html" class="event-card-link">Tap For Details</a>
+          <a href="./rhetoric_rumble.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
   </section>
