--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
 <body>
     <!-- Animated Background -->
     <div id="particles-js"></div>
-
-
-
     <!-- Header Section -->
     <header class="glass-header">
         <div class="header-container">
@@ -70,7 +67,6 @@
     </section>
 
     
-
     <!-- Events Section -->
     <section id="events" class="events-container">
         <div class="events-inner">
@@ -78,7 +74,7 @@
 
             <div class="event-section technical">
                 <div class="event-image">
-                    <img src="tech.jpg" alt="Technical Event">
+                    <img src="./res/tech_main.jpg" alt="Technical Event">
                 </div>
                 <div class="event-content">
                     <h3 class="event-title">Technical</h3>
@@ -94,7 +90,7 @@
                     <a href="./src/nontechnical_events.html" class="event-link">Discover Non-Technical Events →</a>
                 </div>
                 <div class="event-image">
-                    <img src="nontech.jpg" alt="Non-Technical Event">
+                    <img src="./res/nontech_main.jpg" alt="Non-Technical Event">
                 </div>
 
             </div>
