--- a/src/pixel_perfect.html
+++ b/src/pixel_perfect.html
@@ -62,7 +62,7 @@
                 </div>
                 <!-- <p>Team registrations: <span class="event-details-value">463</span></p> -->
                 <br>
-                <a href="../forms/pixel_perfect_form.html" class="event-details-register-button">Register Now</a>
+                <a href="../forms/pixel_perfect.html" class="event-details-register-button">Register Now</a>
 
                 <p class="event-details-disclaimer">No on-spot registration available. Kindly register ASAP.</p>
             </div>
