--- a/src/nontechnical_events.html
+++ b/src/nontechnical_events.html
@@ -28,7 +28,7 @@
   <!-- Particle Background -->
   <div id="particles-js"></div>
 
-  < <nav>
+  <nav>
     <ul>
         <button class="button" onclick="goBack()" >
           <svg class="svgIcon" viewBox="0 0 384 512">
