--- a/forms/cerebra_quest.html
+++ b/forms/cerebra_quest.html
@@ -172,7 +172,7 @@
     })
     .then(data => {
         // ✅ Redirect to success page after registration
-        window.location.href = "success.html";
+        window.location.href = "../success.html";
     })
     .catch(error => {
         alert("Error submitting form. Please try again.");
