--- a/forms/pixel_perfect.html
+++ b/forms/pixel_perfect.html
@@ -131,7 +131,7 @@
 
             <label for="participantsCount">Number of Participants:</label>
             <input type="number" id="participantsCount" name="participantsCount" required>
-
+            <!-- <a href="">Go Back</a> -->
             <button type="submit" >Register</button>
           </form>
         </div>
@@ -174,7 +174,7 @@
     })
     .then(data => {
         // ✅ Redirect to success page after registration
-        window.location.href = "success.html";
+        window.location.href = "../success.html";
     })
     .catch(error => {
         alert("Error submitting form. Please try again.");
