--- a/forms/surprise_event.html
+++ b/forms/surprise_event.html
@@ -173,7 +173,7 @@ function goBack() {
     })
     .then(data => {
         // ✅ Redirect to success page after registration
-        window.location.href = "success.html";
+        window.location.href = "../success.html";
     })
     .catch(error => {
         alert("Error submitting form. Please try again.");
