--- a/success.html
+++ b/success.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024">
     <title>Success - Dextro'25</title>
-    <link rel="stylesheet" href="success.css">
+    <link rel="stylesheet" href="./styles/success.css">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1"></script>
 </head>
