--- a/teams.html
+++ b/teams.html
@@ -62,7 +62,7 @@
 
             <div class="team-member-card">
                 <div class="team-member-image">
-                    <img src=""
+                    <img src="./res/divakar_photo.jpeg"
                         alt="Divakar P">
                 </div>
                 <h3 class="team-member-name">Divakar P</h3>
