--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
             <!-- President -->
             <div class="contact-info">
                 <h3>President</h3>
-                <p>Nithish Kumar K N</p>
-                <p><a href="tel:+919150276535">+91 9150276535</a></p>
+                <p>Gokul Kanna M L<br> <a href="tel:+919940290789">+91 9940290789</a></p>
+                <p>Nithish Kumar K N<br> <a href="tel:+919150276535">+91 9150276535</a></p>
             </div>
 
             <!-- Vice President -->
@@ -260,7 +260,7 @@
             <!-- Registration and Help Desk -->
             <div class="contact-info">
                 <h3>Student Coordinators</h3>
-                <p>Gokul Kanna M L<br> <a href="tel:+919940290789">+91 9940290789</a></p>
+               
                 <p>Tamil Kumaran S<br> <a href="tel:+916374264988">+91 6374264988</a></p>
             </div>
 
