--- a/forms/innovatrix.html
+++ b/forms/innovatrix.html
@@ -122,6 +122,7 @@
 
             <label for="year">Year:</label>
             <select id="year" name="year" required>
+
               <option value="" disabled selected>Select Year</option>
               <option value="1st Year">1st Year</option>
               <option value="2nd Year">2nd Year</option>
@@ -129,7 +130,8 @@
             </select>
 
             <label for="participantsCount">Number of Participants:</label>
-            <select id="year" name="year" required>
+            <select id="participantsCount" name="participantsCount" required>
+
               <option value="" disabled selected>Select Number of Participants</option>
               <option value="1">1</option>
               <option value="2">2</option>
@@ -152,39 +154,40 @@
     function goBack() {
         window.history.back(); // Takes the user to the previous page
     }
-    document.getElementById("registrationForm").addEventListener("submit", function (event) {
-      event.preventDefault();
+    document.getElementById("registrationForm").addEventListener("submit", async function (event) {
+    event.preventDefault();
 
-      const formData = {
+    const formData = {
         participantName: document.getElementById("participantName").value,
         email: document.getElementById("email").value,
         phoneNumber: document.getElementById("phoneNumber").value,
         college: document.getElementById("college").value,
         year: document.getElementById("year").value,
         participantsCount: parseInt(document.getElementById("participantsCount").value)
-      };
+    };
 
-      fetch("https://courageous-simplicity-production.up.railway.app/paper", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify(formData)
-      })
-      .then(response => {
-        if (response.ok) {
-            return response.json();
+    try {
+        const response = await fetch("https://courageous-simplicity-production.up.railway.app/paper", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(formData)
+        });
+
+        if (!response.ok) {
+            throw new Error("Registration failed");
         }
-        throw new Error("Registration failed");
-    })
-    .then(data => {
-        // ✅ Redirect to success page after registration
-        window.location.href = "../success.html";
-    })
-    .catch(error => {
+
+        const data = await response.json();
+        console.log("Response Data:", data); // Debugging
+
+        // Ensure the success.html file is in the same folder as this file
+        window.location.href = "success.html";
+    } catch (error) {
+        console.error("Error:", error);
         alert("Error submitting form. Please try again.");
-    });
+    }
 });
+
   </script>
 
 </body>
