--- a/forms/success.html
+++ b/forms/success.html
@@ -18,7 +18,7 @@
         <div class="glow-box">
             <h1>🎉 Success! 🎉</h1>
             <p>Your registration has been successfully submitted.</p>
-            <a href="index.html" class="btn">Back to Home</a>
+            <a href="../index.html" class="btn">Back to Home</a>
         </div>
     </div>
 
