--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
             <h2 class="events-heading">Our Gallery</h2>
             <br>
             <div class="carousel">
-                <img src="https://images.pexels.com/photos/30613082/pexels-photo-30613082/free-photo-of-prickly-pear-cactus-in-california-desert-landscape.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="active">
-                <img src="https://images.pexels.com/photos/30600481/pexels-photo-30600481/free-photo-of-serene-chinese-pavilion-in-botanical-garden.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
-                <img src="https://images.pexels.com/photos/30634755/pexels-photo-30634755/free-photo-of-serene-morning-seascape-in-istanbul.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
-        
+                <img src="./res/DSC_0485.JPG" class="active">
+                <img src="./res/DSC_0806.JPG" class="active">
+                <img src="./res/DSC_0056.JPG" class="active">
+                <img src="./res/DSC_0815.JPG" class="active">
                 <!-- Navigation buttons -->
                 <button class="carousel-btn prev" onclick="prevSlide()">❮</button>
                 <button class="carousel-btn next" onclick="nextSlide()">❯</button>
