--- a/src/technical_events.html
+++ b/src/technical_events.html
@@ -89,7 +89,7 @@
       <!-- Event Card 4 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="../res/cerebra_small.jpeg" alt="TechTrivia">
+          <img src="../res/cerebra_small.jpeg" alt="Cerebra Quest">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Cerebra Quest</h3>
@@ -107,7 +107,7 @@
       <!-- Event Card 5 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="../res/runtime_small.jpeg" alt="TechTrivia">
+          <img src="../res/runtime_small.jpeg" alt="runtime_error">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Runtime Terror</h3>
@@ -125,7 +125,25 @@
       <!-- Event Card 6 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="../res/innovatrix_small.jpg" alt="TechTrivia">
+          <img src="../res/runtime_small.jpeg" alt="Prototype Parade">
+        </div>
+        <div class="event-card-content">
+          <h3 class="event-card-title">Prototype Parade</h3>
+          <p class="event-card-tags">#InnovatorsArena #BuildToInspire</p>
+          <p class="event-card-description">Innovate, Build, and Transform the Future—Where Ideas Meet Impact!</p>
+        </div>
+        <div class="event-card-hover-content">
+          <p>Time : 08:00 AM</p>
+          <p>Entry Fee : Free</p>
+          <p>Category : Individual Event</p>
+          <a href="./prototype_parade.html" class="event-card-link">Tap For Details</a>
+        </div>
+      </div>
+
+      <!-- Event Card 7 -->
+      <div class="event-card">
+        <div class="event-card-image">
+          <img src="../res/innovatrix_small.jpg" alt="Innovatrix">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Innovatrix</h3>
